tests/error/comptime/check_slice_construction03.bz
// error: invalid memory range for a slice of type '[: int32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		__builtin_slice_from_ptrs(foo(), foo());
	});
}
